Gitignore and project

--- a/src/hersh-qt/hersh-qt.vcxproj
+++ b/src/hersh-qt/hersh-qt.vcxproj
@@ -14,12 +14,13 @@
     <ProjectGuid>{303606F6-D3C5-47AD-A7C8-39EC0513C821}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>hershqt</RootNamespace>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
