--- a/src/main-qt/main-qt.vcxproj.filters
+++ b/src/main-qt/main-qt.vcxproj.filters
@@ -50,6 +50,15 @@
     <ClCompile Include="GeneratedFiles\qrc_envelopeapp.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
+    <ClCompile Include="segmentpaintwidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_segmentpaintwidget.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_segmentpaintwidget.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="envelopeapp.h">
@@ -63,6 +72,9 @@
     </CustomBuild>
     <CustomBuild Include="GeneratedFiles\Debug\main.moc">
       <Filter>Generated Files\Debug</Filter>
+    </CustomBuild>
+    <CustomBuild Include="segmentpaintwidget.h">
+      <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
