--- a/src/hersh-qt/hersh-qt.vcxproj
+++ b/src/hersh-qt/hersh-qt.vcxproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <ClInclude Include="hershberger.h" />
     <ClInclude Include="segment.h" />
+    <ClInclude Include="util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
