--- a/src/hersh-qt/hersh-qt.vcxproj.filters
+++ b/src/hersh-qt/hersh-qt.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="segment.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
