--- a/src/tests/tests.vcxproj
+++ b/src/tests/tests.vcxproj
@@ -70,7 +70,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>"$(TargetDir)\$(TargetName).exe" --result_code=no --report_level=no --catch_system_errors=no</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>Auto run tests</Message>
